<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/historyBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="5dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle2"
                android:onClick="paymentBTN"
                android:src="@drawable/ic_baseline_format_list_bulleted_24"
                app:backgroundTint="@color/azulRedelcom2" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="4"
                android:text="" />

            <Button
                android:id="@+id/cleanBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="5dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle2"
                android:onClick="cleanRegisters"
                android:text="@string/clean"
                android:textSize="30sp"
                app:backgroundTint="@color/azulRedelcom2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textSize="30sp"
                app:backgroundTint="@color/back_num" />

            <Button
                android:id="@+id/eightBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textSize="30sp"
                app:backgroundTint="@color/back_num" />

            <Button
                android:id="@+id/nineBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="nineBTN"
                android:text="@string/nine"
                android:textSize="30sp"
                app:backgroundTint="@color/back_num" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fourBTN"
                android:text="@string/four"
                android:textSize="30sp"
                app:backgroundTint="@color/back_num" />

            <Button
                android:id="@+id/fiveBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fiveBTN"
                android:text="@string/five"
                android:textSize="30sp"
                app:backgroundTint="@color/back_num" />

            <Button
                android:id="@+id/sixBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textSize="30sp"
                app:backgroundTint="@color/back_num" />

            <!--            <ImageButton-->
            <!--                android:id="@+id/backspaceBTN"-->
            <!--                style="@style/Widget.AppCompat.Button.Borderless"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="70dp"-->
            <!--                android:layout_margin="6dp"-->
            <!--                android:background="@drawable/circle"-->
            <!--                android:backgroundTint="@color/azulRedelcom2"-->
            <!--                android:contentDescription="@string/backspace"-->
            <!--                android:onClick="backSpaceBTN"-->
            <!--                app:layout_constraintBottom_toTopOf="@+id/tableLayout"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintHorizontal_bias="1.0"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:srcCompat="@drawable/backspace" />-->

            <!--            <Button-->
            <!--                android:id="@+id/multiplyBTN"-->
            <!--                style="@style/Widget.AppCompat.Button.Borderless"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="70dp"-->
            <!--                android:layout_margin="5dp"-->
            <!--                android:layout_weight="1"-->
            <!--                android:background="@drawable/circle"-->
            <!--                android:onClick="multiplyBTN"-->
            <!--                android:text="@string/multiply"-->
            <!--                android:textSize="27sp"-->
            <!--                app:backgroundTint="#e2703a" />-->
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="oneBTN"
                android:text="@string/one"
                android:textSize="30sp"
                app:backgroundTint="@color/back_num" />

            <Button
                android:id="@+id/twoBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="twoBTN"
                android:text="@string/two"
                android:textSize="30sp"
                app:backgroundTint="@color/back_num" />

            <Button
                android:id="@+id/threeBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="threeBTN"
                android:text="@string/three"
                android:textSize="30sp"
                app:backgroundTint="@color/back_num" />

            <!--            <Button-->
            <!--                android:id="@+id/addBTN"-->
            <!--                style="@style/Widget.AppCompat.Button.Borderless"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="70dp"-->
            <!--                android:layout_margin="5dp"-->
            <!--                android:layout_weight="1"-->
            <!--                android:background="@drawable/circle"-->
            <!--                android:onClick="addBTN"-->
            <!--                android:text="@string/add"-->
            <!--                android:textSize="31sp"-->
            <!--                app:backgroundTint="@color/back_add" />-->
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/zeroBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:background="@drawable/circle"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textSize="30sp"
                app:backgroundTint="@color/back_num" />

            <Button
                android:id="@+id/zerozeroBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:background="@drawable/circle"
                android:onClick="zerozeroBTN"
                android:text="@string/zerozero"
                android:textSize="30sp"
                app:backgroundTint="@color/back_num" />

            <!--            <ImageButton-->
            <!--                android:id="@+id/historyBTN"-->
            <!--                style="@style/Widget.AppCompat.Button.Borderless"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="70dp"-->
            <!--                android:layout_margin="5dp"-->
            <!--                android:layout_weight="1"-->
            <!--                android:background="@drawable/circle"-->
            <!--                android:onClick="paymentBTN"-->
            <!--                android:src="@drawable/ic_baseline_history_243"-->
            <!--                app:backgroundTint="@color/azulRedelcom2" />-->
            <!--             <Button-->
            <!--                android:id="@+id/historyBTN"-->
            <!--                style="@style/Widget.AppCompat.Button.Borderless"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="70dp"-->
            <!--                android:layout_margin="5dp"-->
            <!--                android:layout_weight="1"-->
            <!--                android:background="@drawable/circle"-->
            <!--                android:onClick="paymentBTN"-->
            <!--                android:text="H"-->
            <!--                app:backgroundTint="@color/azulRedelcom2" />-->

            <!--            <Button-->
            <!--                android:id="@+id/pointBTN"-->
            <!--                style="@style/Widget.AppCompat.Button.Borderless"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="70dp"-->
            <!--                android:layout_margin="5dp"-->
            <!--                android:layout_weight="1"-->
            <!--                android:background="@drawable/circle"-->
            <!--                android:onClick="pointBTN"-->
            <!--                android:text="@string/point"-->
            <!--                android:textSize="24sp"-->
            <!--                app:backgroundTint="#194350" />-->

            <!--            <Button-->
            <!--                android:id="@+id/equalsBTN"-->
            <!--                style="@style/Widget.AppCompat.Button.Borderless"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="70dp"-->
            <!--                android:layout_margin="5dp"-->
            <!--                android:layout_weight="1"-->
            <!--                android:background="@drawable/circle"-->
            <!--                android:backgroundTint="#43A047"-->
            <!--                android:onClick="equalsBTN"-->
            <!--                android:text="@string/equals"-->
            <!--                android:textSize="24sp"-->
            <!--                app:backgroundTint="#e2703a" />-->
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/addBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:background="@drawable/circle"
                android:onClick="addBTN"
                android:text="@string/add"
                android:textSize="31sp"
                app:backgroundTint="@color/back_add" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/paymentBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:background="@drawable/circle"
                android:onClick="paymentBTN"
                android:text="@string/parentheses"
                android:textSize="24sp"
                app:backgroundTint="@color/azulRedelcom2" />

            <!--            <Button-->
            <!--                android:id="@+id/clearBTN"-->
            <!--                style="@style/Widget.AppCompat.Button.Borderless"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="70dp"-->
            <!--                android:layout_margin="5dp"-->
            <!--                android:layout_weight="1"-->
            <!--                android:background="@drawable/circle"-->
            <!--                android:onClick="clearBTN"-->
            <!--                android:text="@string/clear"-->
            <!--                android:textSize="24sp"-->
            <!--                app:backgroundTint="#5f939a" />-->


        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="369dp"
        android:layout_height="71dp"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageButton
        android:id="@+id/backspaceBTN2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:background="@drawable/circle2"
        android:backgroundTint="@color/azulRedelcom2"
        android:contentDescription="@string/backspace"
        android:onClick="backSpaceBTN"
        app:layout_constraintBottom_toBottomOf="@+id/input"
        app:layout_constraintStart_toEndOf="@+id/input"
        app:layout_constraintTop_toTopOf="@+id/input"
        app:srcCompat="@drawable/backspace" />


</androidx.constraintlayout.widget.ConstraintLayout>